:bug: Fix font color covered by render when use dark mode
Fix https://github.com/justice2001/halo-plugin-vditor/issues/18
Fix https://git.mczhengyi.top/zhengyi/halo-plugin-vditor/issues/48

--- a/src/main/resources/static/vditor-render.css
+++ b/src/main/resources/static/vditor-render.css
@@ -1,40 +1,3 @@
-.vditor {
-    --border-color: #d1d5da;
-    --second-color: rgba(88, 96, 105, 0.36);
-    --panel-background-color: #fff;
-    --panel-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-    --toolbar-background-color: #f6f8fa;
-    --toolbar-icon-color: #586069;
-    --toolbar-icon-hover-color: #4285f4;
-    --toolbar-height: 35px;
-    --toolbar-divider-margin-top: 8px;
-    --textarea-background-color: #fafbfc;
-    --textarea-text-color: #24292e;
-    --resize-icon-color: var(--toolbar-icon-color);
-    --resize-background-color: var(--toolbar-background-color);
-    --resize-hover-icon-color: var(--panel-background-color);
-    --resize-hover-background-color: var(--toolbar-icon-hover-color);
-    --count-background-color: rgba(27, 31, 35, 0.05);
-    --heading-border-color: #eaecef;
-    --blockquote-color: #6a737d;
-    --ir-heading-color: #660e7a;
-    --ir-title-color: #808080;
-    --ir-bi-color: #0033b3;
-    --ir-link-color: #008000;
-    --ir-bracket-color: #0000ff;
-    --ir-paren-color: #008000;
-}
-
-.vditor-reset {
-    color: #24292e;
-    font-variant-ligatures: no-common-ligatures;
-    font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", "Hiragino Sans GB", "Microsoft Yahei", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
-    word-wrap: break-word;
-    overflow: auto;
-    line-height: 1.5;
-    font-size: 16px;
-    word-break: break-word;
-}
 .vditor-reset--anchor {
     padding-left: 20px;
 }
